<resources>
    <string name="app_name">Plantlet</string>

    <!--Fragment Titles-->
    <string name="home_title">Agenda</string>
    <string name="view_title">View Assignment</string>
    <string name="create_title">Create Assignment</string>
    <string name="edit_title">Edit Assignment</string>
    <string name="courses_title">Courses</string>
    <string name="import_title">Import</string>
    <string name="options_title">Platform Options</string>
    <string name="licenses_title">Open Source Licenses</string>

    <!--Contextual App Bar Titles-->
    <string name="import_delete_title">Delete Platforms</string>

    <!--Home Fragment-->
    <string name="priority">Priority</string>
    <string name="upcoming_assignments">Upcoming</string>
    <string name="none">- None</string>

    <string name="classes_icon_title">Classes</string>
    <string name="import_icon_title">Import</string>
    <string name="open_source_icon_title">Open Source Licenses</string>
    <string name="privacy">Privacy Policy</string>

    <string name="already_in_range_toast">Due date of assignment is in priority range</string>

    <!--Create Fragment/Edit Fragment-->
    <string name="save">save</string>
    <string name="mark_priority">Mark as Priority</string>

    <string name="title_label">Title</string>
    <string name="due_date_label">Due Date</string>
    <string name="description_label">Description</string>

    <string name="choose_date">Choose Date</string>

    <string name="untitled">Untitled</string>

    <string-array name="subject_array">
        <item>Art</item>
        <item>History</item>
        <item>Language</item>
        <item>Literature</item>
        <item>Math</item>
        <item>Music</item>
        <item>Science</item>
        <item>Other</item>
    </string-array>

    <!--View Fragment-->
    <string name="edit">Edit</string>

    <string name="due_date">Due Date: %s</string>
    <string name="subject">Subject: %s</string>

    <!--Import Fragment-->
    <string name="add_import_platform">Add Import Platform</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_in_with">Sign in with:</string>
    <string name="google">Google</string>
    <string name="already_signed_in">Already signed in</string>

    <string name="google_calendar">Google Calendar</string>
    <string name="google_classroom">Google Classroom</string>

    <string name="tap_for_more_options">Tap for more options</string>
    <string name="choose_calendars">Choose calendars to import</string>

    <string name="logged_out">You have been logged out of an account. Logging out.</string>

    <string name="delete">Delete</string>

    <string name="no_platforms">No Platforms\nClick the + icon to add some!</string>

    <string name="import_error">Import error</string>
    <string name="import_info_error">Error getting info</string>
    <string name="log_out_error">Error logging out</string>
    <string name="gc_not_allowed_error">Not permitted into Google Classroom, signing out</string>

    <!-- Options Fragment -->
    <string name="op_none">No options for this platform</string>

    <!--Platform Select Fragment-->
    <string name="done">Done</string>

    <!--Courses Fragment-->
    <string name="no_courses">No Courses\nTry signing into a platform!</string>

    <string name="save_error">Save error</string>
    <string name="save_get_error">Unable to retrieve subject</string>

    <string name="ok">Ok</string>

    <!--Content Descriptions-->
    <string name="cd_fab">Create a new assignment</string>

    <string name="cd_subject_icon">Subject icon</string>
    <string name="cd_done">Done</string>
    <string name="cd_date_range">Date range</string>

    <string name="cd_platform_icon">Platform icon</string>
    <string name="cd_view_platform">View platform</string>

    <string name="cd_courses_icon">Courses icon</string>
    <string name="cd_import_icon">Import icon</string>
    <string name="cd_account_icon">Account icon</string>
    <string name="cd_open_source">Open source</string>
    <string name="cd_privacy">Link to privacy policy</string>

    <string name="cd_sign_out">Sign out</string>

    <string name="cd_add_import">Add import platform</string>
    <string name="cd_delete">Delete</string>

    <string name="cd_add_platform">Add</string>
    <string name="cd_remove_platform">Remove</string>

    <!--General Errors-->
    <string name="error_no_connection">No internet connection</string>

</resources>
