<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_ll_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeFragment">

    <com.google.android.material.appbar.AppBarLayout
...
            android:layout_gravity="bottom"
            app:hideOnScroll="true"
            app:menu="@menu/menu_home"
            style="@style/Widget.MaterialComponents.BottomAppBar.Colored"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cd_fab"
            app:srcCompat="@drawable/ic_add_white_24dp"
            app:layout_anchor="@id/bottom_app_bar"/>

...
