<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/menu_create">

    <item
        android:id="@+id/create_star"
        android:title="@string/mark_priority"
        android:icon="@drawable/star_anim"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/create_save"
        android:title="@string/save"
        app:showAsAction="ifRoom|withText"/>

</menu>