package com.joshuaau.plantlet;


import androidx.test.filters.LargeTest;
import androidx.test.runner.AndroidJUnit4;

import org.junit.runner.RunWith;

import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.matcher.ViewMatchers.withContentDescription;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withText;
import static org.hamcrest.Matchers.allOf;
import static org.hamcrest.Matchers.anything;
import static org.hamcrest.Matchers.is;

@LargeTest
@RunWith(AndroidJUnit4.class)
public class MainActivityTest {
//
//    @Rule
//    public ActivityTestRule<MainActivity> mActivityTestRule = new ActivityTestRule<>(MainActivity.class);
//
//    @Test
//    public void mainActivityTest() {
//        ViewInteraction floatingActionButton = onView(
//                allOf(withId(R.id.fab), withContentDescription("Create a new assignment"),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(R.id.home_ll_root),
//                                        1),
//                                2),
//                        isDisplayed()));
//        floatingActionButton.perform(click());
//
//        ViewInteraction textInputEditText = onView(
//                allOf(withId(R.id.create_et_title),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(R.id.create_ti_title),
//                                        0),
//                                0)));
//        textInputEditText.perform(scrollTo(), replaceText("Hi there!"), closeSoftKeyboard());
//
//        ViewInteraction appCompatImageButton = onView(
//                allOf(withId(R.id.create_ib_date), withContentDescription("Date range"),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(R.id.create_ll_due_date),
//                                        1),
//                                1),
//                        isDisplayed()));
//        appCompatImageButton.perform(click());
//
//        ViewInteraction appCompatImageButton2 = onView(
//                allOf(withClassName(is("androidx.appcompat.widget.AppCompatImageButton")), withContentDescription("Next month"),
//                        childAtPosition(
//                                allOf(withClassName(is("android.widget.DayPickerView")),
//                                        childAtPosition(
//                                                withClassName(is("com.android.internal.widget.DialogViewAnimator")),
//                                                0)),
//                                2)));
//        appCompatImageButton2.perform(scrollTo(), click());
//
//        ViewInteraction materialButton = onView(
//                allOf(withId(android.R.id.button1), withText("OK"),
//                        childAtPosition(
//                                childAtPosition(
//                                        withClassName(is("android.widget.ScrollView")),
//                                        0),
//                                3)));
//        materialButton.perform(scrollTo(), click());
//
//        ViewInteraction textInputEditText2 = onView(
//                allOf(withId(R.id.create_et_description),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(R.id.create_ti_description),
//                                        0),
//                                0),
//                        isDisplayed()));
//        textInputEditText2.perform(replaceText("Guess what?!?! This was made with Espresso!"), closeSoftKeyboard());
//
//        ViewInteraction appCompatSpinner = onView(
//                allOf(withId(R.id.create_s_subject),
//                        childAtPosition(
//                                allOf(withId(R.id.create_constraint_middle),
//                                        childAtPosition(
//                                                withId(R.id.create_constraint_layout),
//                                                1)),
//                                1)));
//        appCompatSpinner.perform(scrollTo(), click());
//
//        DataInteraction appCompatCheckedTextView = onData(anything())
//                .inAdapterView(childAtPosition(
//                        withClassName(is("android.widget.PopupWindow$PopupBackgroundView")),
//                        0))
//                .atPosition(6);
//        appCompatCheckedTextView.perform(click());
//
//        ViewInteraction actionMenuItemView = onView(
//                allOf(withId(R.id.create_save), withText("save"),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(R.id.create_toolbar),
//                                        2),
//                                1),
//                        isDisplayed()));
//        actionMenuItemView.perform(click());
//    }
//
//    private static Matcher<View> childAtPosition(
//            final Matcher<View> parentMatcher, final int position) {
//
//        return new TypeSafeMatcher<View>() {
//            @Override
//            public void describeTo(Description description) {
//                description.appendText("Child at position " + position + " in parent ");
//                parentMatcher.describeTo(description);
//            }
//
//            @Override
//            public boolean matchesSafely(View view) {
//                ViewParent parent = view.getParent();
//                return parent instanceof ViewGroup && parentMatcher.matches(parent)
//                        && view.equals(((ViewGroup) parent).getChildAt(position));
//            }
//        };
//    }
}
